# rosen-number-theory

./: .gitignore  README.md
lib/: ch1_sec3_prob3.ml  ch1_sec5_prob4.ml
rosen_number_theory/: Makefile  dune-project  rosen_number_theory.opam
rosen_number_theory/lib/: ch1_sec3_prob3.ml  dune
rosen_number_theory/src/: ch1_sec3_prob3.ml
rosen_number_theory/test/: dune  test_rosen_number_theory.ml
src/: dune  main.ml
test/: dune  test_rosen_number_theory.ml
