(lang dune 3.15)

(name rosen_number_theory)

(generate_opam_files true)

(source
 (github pingpingy1/rosen-number-theory))

(authors "Heewon Lee")

(maintainers "Heewon Lee")

; (license LICENSE)

; (documentation https://url/to/documentation)

(package
 (name rosen_number_theory)
 (synopsis "My solutions to programming projects of Rosen's number theory")
;  (description "")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
